--- a/Software Testing-605/unittesting/pom.xml
+++ b/Software Testing-605/unittesting/pom.xml
@@ -19,6 +19,12 @@
 			<version>RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>5.12.0</version> <!-- Use the latest version -->
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 
