--- a/Software Design-606/userrolemanagement/src/main/resources/application.properties
+++ b/Software Design-606/userrolemanagement/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8080
 
 # H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:usermanagement
+spring.datasource.url=jdbc:h2:mem:userrolemanagement
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -19,6 +19,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Logging configuration
 logging.level.org.springframework=INFO
-logging.level.com.example.usermanagement=DEBUG
+logging.level.com.example.userrolemanagement=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
