docker done finally

--- a/Distributed Systems-601/smartlibrary/nginx/default.conf
+++ b/Distributed Systems-601/smartlibrary/nginx/default.conf
@@ -2,20 +2,14 @@ server {
     listen 80;
 
     location /api/users/ {
-        proxy_pass http://user-service:8081/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_pass http://user-service:8081;
     }
 
     location /api/books/ {
-        proxy_pass http://book-service:8082/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_pass http://book-service:8082;
     }
 
     location /api/loans/ {
-        proxy_pass http://loan-service:8083/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_pass http://loan-service:8083;
     }
 }
