--- a/Distributed Systems-601/smartlibrary/book-service/Dockerfile
+++ b/Distributed Systems-601/smartlibrary/book-service/Dockerfile
@@ -2,9 +2,10 @@ FROM node:18
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY . .
+
 RUN npm install
 
-COPY . .
+EXPOSE 8082
 
 CMD ["npm", "run", "server"]
