--- a/Distributed Systems-601/smartlibrary/docker-compose.yml
+++ b/Distributed Systems-601/smartlibrary/docker-compose.yml
@@ -1,37 +1,39 @@
-version: '3.8'
+version: "3.8"
 
 services:
   user-service:
     build: ./user-service
     ports:
       - "8081:8081"
-    env_file:
-      - ./user-service/.env
-    restart: always
+    networks:
+      - smartlib-net
 
   book-service:
     build: ./book-service
     ports:
       - "8082:8082"
-    env_file:
-      - ./book-service/.env
-    restart: always
+    networks:
+      - smartlib-net
 
   loan-service:
     build: ./loan_service
     ports:
       - "8083:8083"
-    env_file:
-      - ./loan_service/.env
-    restart: always
+    networks:
+      - smartlib-net
 
   nginx:
     image: nginx:latest
     ports:
-      - "8000:80" 
+      - "8080:80" 
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - user-service
       - book-service
       - loan-service
+    networks:
+      - smartlib-net
+
+networks:
+  smartlib-net:
