--- a/Distributed Systems-601/smartlibrary/user-service/Dockerfile
+++ b/Distributed Systems-601/smartlibrary/user-service/Dockerfile
@@ -2,8 +2,10 @@ FROM node:18
 
 WORKDIR /app
 
-COPY package*.json ./
-RUN npm install 
 COPY . .
+
+RUN npm install
+
+EXPOSE 8081
 
 CMD ["npm", "run", "server"]
