--- a/Distributed Systems-601/smartlibrary/nginx/default.conf
+++ b/Distributed Systems-601/smartlibrary/nginx/default.conf
@@ -1,15 +1,47 @@
 server {
     listen 80;
+    
+    # Use resolver for dynamic DNS resolution
+    resolver 127.0.0.11 valid=10s;
+    
+    # Use variables to enable dynamic resolution
+    set $user_service "user-service:8081";
+    set $book_service "book-service:8082";
+    set $loan_service "loan-service:8083";
 
     location /api/users/ {
-        proxy_pass http://user-service:8081;
+        proxy_pass http://$user_service;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 30s;
+        proxy_read_timeout 30s;
     }
 
     location /api/books/ {
-        proxy_pass http://book-service:8082;
+        proxy_pass http://$book_service;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 30s;
+        proxy_read_timeout 30s;
     }
 
     location /api/loans/ {
-        proxy_pass http://loan-service:8083;
+        proxy_pass http://$loan_service;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 30s;
+        proxy_read_timeout 30s;
+    }
+
+    # Health check endpoint
+    location /health {
+        return 200 "nginx OK";
+        add_header Content-Type text/plain;
     }
 }
