--- a/Distributed Systems-601/smartlibrary/docker-stack.yml
+++ b/Distributed Systems-601/smartlibrary/docker-stack.yml
@@ -1,100 +1,180 @@
 version: "3.8"
 
+configs:
+  nginx_config_v2:
+    file: ./nginx/default.conf
+
+
 services:
+  # MongoDB Services
+  mongo-user:
+    image: mongo:latest
+    environment:
+      MONGO_INITDB_DATABASE: userDB
+    volumes:
+      - mongo_user_data:/data/db
+    networks:
+      - smartlib-overlay
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
+        delay: 10s
+        max_attempts: 3
+      update_config:
+        delay: 5s
+        order: start-first
+      placement:
+        constraints:
+          - node.role == manager
+
+  mongo-book:
+    image: mongo:latest
+    environment:
+      MONGO_INITDB_DATABASE: bookDB
+    volumes:
+      - mongo_book_data:/data/db
+    networks:
+      - smartlib-overlay
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
+        delay: 10s
+        max_attempts: 3
+      update_config:
+        delay: 5s
+        order: start-first
+      placement:
+        constraints:
+          - node.role == manager
+
+  mongo-loan:
+    image: mongo:latest
+    environment:
+      MONGO_INITDB_DATABASE: loanDB
+    volumes:
+      - mongo_loan_data:/data/db
+    networks:
+      - smartlib-overlay
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
+        delay: 10s
+        max_attempts: 3
+      update_config:
+        delay: 5s
+        order: start-first
+      placement:
+        constraints:
+          - node.role == manager
+
+  # Application Services
   user-service:
     image: tashrif2001/smartlibrary:user-service
     ports:
       - "8081:8081"
+    depends_on:
+      - mongo-user
+    environment:
+      MONGO_URL: mongodb://mongo-user/userDB
     networks:
       - smartlib-overlay
     deploy:
       replicas: 2
       restart_policy:
         condition: on-failure
-        delay: 5s
-        max_attempts: 3
+        delay: 15s
+        max_attempts: 5
       update_config:
-        parallelism: 1
-        delay: 10s
-      resources:
-        limits:
-          memory: 512M
-        reservations:
-          memory: 256M
+        delay: 30s
+        order: start-first
+      placement:
+        constraints:
+          - node.role == manager
 
   book-service:
     image: tashrif2001/smartlibrary:book-service
     ports:
       - "8082:8082"
+    depends_on:
+      - mongo-book
+    environment:
+      MONGO_URL: mongodb://mongo-book/bookDB
     networks:
       - smartlib-overlay
     deploy:
       replicas: 2
       restart_policy:
         condition: on-failure
-        delay: 5s
-        max_attempts: 3
+        delay: 15s
+        max_attempts: 5
       update_config:
-        parallelism: 1
-        delay: 10s
-      resources:
-        limits:
-          memory: 512M
-        reservations:
-          memory: 256M
+        delay: 30s
+        order: start-first
+      # placement:
+      #   constraints:
+      #     - node.role == worker
 
   loan-service:
     image: tashrif2001/smartlibrary:loan-service
     ports:
       - "8083:8083"
-    networks:
-      - smartlib-overlay
+    depends_on:
+      - mongo-loan
+      - user-service
+      - book-service
     environment:
+      MONGO_URL: mongodb://mongo-loan/loanDB
       USER_SERVICE_URL: http://user-service:8081
       BOOK_SERVICE_URL: http://book-service:8082
+    networks:
+      - smartlib-overlay
     deploy:
       replicas: 2
       restart_policy:
         condition: on-failure
-        delay: 5s
-        max_attempts: 3
+        delay: 20s
+        max_attempts: 5
       update_config:
-        parallelism: 1
-        delay: 10s
-      resources:
-        limits:
-          memory: 512M
-        reservations:
-          memory: 256M
+        delay: 45s
+        order: start-first
+      # placement:
+      #   constraints:
+      #     - node.role == worker
 
   nginx:
     image: nginx:latest
     ports:
       - "80:80"
-    volumes:
-      - "/home/tashrif/Desktop/SEM-6/Distributed Systems-601/smartlibrary/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro"
+    configs:
+      - source: nginx_config_v2
+        target: /etc/nginx/conf.d/default.conf
+        mode: 0644
     networks:
       - smartlib-overlay
-    depends_on:
-      - user-service
-      - book-service
-      - loan-service
     deploy:
       replicas: 1
       restart_policy:
         condition: on-failure
         delay: 5s
         max_attempts: 3
-      placement:
-        constraints:
-          - node.role == manager
       resources:
         limits:
           memory: 256M
         reservations:
           memory: 128M
+      placement:
+        constraints:
+          - node.role == manager
 
 networks:
   smartlib-overlay:
     driver: overlay
     attachable: true
+
+volumes:
+  mongo_user_data:
+  mongo_book_data:
+  mongo_loan_data:
