--- a/Distributed Systems-601/smartlibrary/docker-stack.yml
+++ b/Distributed Systems-601/smartlibrary/docker-stack.yml
@@ -1,10 +1,5 @@
 version: "3.8"
 
-configs:
-  nginx_config_v2:
-    file: ./nginx/default.conf
-
-
 services:
   # MongoDB Services
   mongo-user:
@@ -19,11 +14,6 @@ services:
       replicas: 1
       restart_policy:
         condition: on-failure
-        delay: 10s
-        max_attempts: 3
-      update_config:
-        delay: 5s
-        order: start-first
       placement:
         constraints:
           - node.role == manager
@@ -40,11 +30,6 @@ services:
       replicas: 1
       restart_policy:
         condition: on-failure
-        delay: 10s
-        max_attempts: 3
-      update_config:
-        delay: 5s
-        order: start-first
       placement:
         constraints:
           - node.role == manager
@@ -61,11 +46,6 @@ services:
       replicas: 1
       restart_policy:
         condition: on-failure
-        delay: 10s
-        max_attempts: 3
-      update_config:
-        delay: 5s
-        order: start-first
       placement:
         constraints:
           - node.role == manager
@@ -82,14 +62,9 @@ services:
     networks:
       - smartlib-overlay
     deploy:
-      replicas: 2
+      replicas: 3
       restart_policy:
         condition: on-failure
-        delay: 15s
-        max_attempts: 5
-      update_config:
-        delay: 30s
-        order: start-first
       placement:
         constraints:
           - node.role == manager
@@ -105,14 +80,9 @@ services:
     networks:
       - smartlib-overlay
     deploy:
-      replicas: 2
+      replicas: 3
       restart_policy:
         condition: on-failure
-        delay: 15s
-        max_attempts: 5
-      update_config:
-        delay: 30s
-        order: start-first
       # placement:
       #   constraints:
       #     - node.role == worker
@@ -132,14 +102,9 @@ services:
     networks:
       - smartlib-overlay
     deploy:
-      replicas: 2
+      replicas: 3
       restart_policy:
         condition: on-failure
-        delay: 20s
-        max_attempts: 5
-      update_config:
-        delay: 45s
-        order: start-first
       # placement:
       #   constraints:
       #     - node.role == worker
@@ -148,23 +113,14 @@ services:
     image: nginx:latest
     ports:
       - "80:80"
-    configs:
-      - source: nginx_config_v2
-        target: /etc/nginx/conf.d/default.conf
-        mode: 0644
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
       - smartlib-overlay
     deploy:
       replicas: 1
       restart_policy:
         condition: on-failure
-        delay: 5s
-        max_attempts: 3
-      resources:
-        limits:
-          memory: 256M
-        reservations:
-          memory: 128M
       placement:
         constraints:
           - node.role == manager
